--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -348,3 +348,12 @@
 .lg-toolbar .lg-icon::after {
   color: #999;
 }
+
+button {
+	background-color: #1e1e2e;
+	border: none;
+	color: #cdd6f4;
+	border-radius: 12px;
+	padding: 12px;
+	padding-top: 8px;
+}
