--- a/layouts/shortcodes/button.html
+++ b/layouts/shortcodes/button.html
@@ -1,1 +1,1 @@
-<button onclick="sendMessage(prompt('What is your name?'), {{ .Get "item" }})">{{ .Inner }}</button>
+<button onclick="var name = prompt('What is your name?'); if (name !== null) {sendMessage(name, {{ .Get "item" }})}">{{ .Inner }}</button>
